--- a/project-1/variation_18.html
+++ b/project-1/variation_18.html
@@ -12,24 +12,15 @@
    <style>
 
     body {
-      font-family: "mono type", Courier, sarif;
+      font-family: arial, Courier, sarif;
       font-size: 11pt;
-      text-decoration:overline;
-      color:red;
-      font-weight: bold;
+      text-decoration:none;
+      color: #8CE6FF;
       font-style:normal;
-      border: 40px normal;
-      border-bottom-left-radius:50%;
-      border-top-right-radius:50%;
-      border-width:10px;
-      margin: 100pt 200pt 90pt 200pt;
-      padding: 10pt 20pt 10pt 20pt;
-      box-sizing: 600px;
-      box-shadow: 60px 10px 90px 20px red inset;
-      background-color: blue;
+      background-color: #B9FFF9;
       background-image:url("file:///Users/adonis/Desktop/github/interactive/assets/images/red.jpg");
-      background-repeat:repeat-y;
-      background-position: 50% 90%;
+      background-repeat:repeat;
+      background-position: 130% 200%;
       background-size: 20px 60px;
 
       }
@@ -39,15 +30,33 @@
 
   <body>
   
-<p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; formar </p>
-<p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; reforma </p>
-<p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; disforma </p>
-<p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; transforma </p>
-<p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; conforma </p>
-<p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; informa </p>
-<p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; forma </p>
+<p> formar reforma disforma transforma conforma informa forma </p>
+<p> formar reforma disforma transforma conforma informa forma </p>
+<p> formar reforma disforma transforma conforma informa forma </p>
+<p> formar reforma disforma transforma conforma informa forma </p>
+<p> formar reforma disforma transforma conforma informa forma </p>
+<p> formar reforma disforma transforma conforma informa forma </p>
+<p> formar reforma disforma transforma conforma informa forma </p>
+<p> formar reforma disforma transforma conforma informa forma </p>
+<p> formar reforma disforma transforma conforma informa forma </p>
+<p> formar reforma disforma transforma conforma informa forma </p>
+<p> formar reforma disforma transforma conforma informa forma </p>
+<p> formar reforma disforma transforma conforma informa forma </p>
+<p> formar reforma disforma transforma conforma informa forma </p>
+<p> formar reforma disforma transforma conforma informa forma </p>
+<p> formar reforma disforma transforma conforma informa forma </p>
+<p> formar reforma disforma transforma conforma informa forma </p>
+<p> formar reforma disforma transforma conforma informa forma </p>
+<p> formar reforma disforma transforma conforma informa forma </p>
+<p> formar reforma disforma transforma conforma informa forma </p>
+<p> formar reforma disforma transforma conforma informa forma </p>
+<p> formar reforma disforma transforma conforma informa forma </p>
+<p> formar reforma disforma transforma conforma informa forma </p>
+<p> formar reforma disforma transforma conforma informa forma </p>
 
-   <p> <br><br><br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Augusto de campos </p>
+
+
+<p> Augusto de campos </p>
     
 
    </a>
