--- a/project-1/variation_20.html
+++ b/project-1/variation_20.html
@@ -4,26 +4,8 @@
 
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>augusto de campos</title>
-
-    <style>
-
-    body {
-      margin: 89px;
-      color: #black;
-      font-family: "Lucida Grande", Courier, Sans-sarif;
-      background-color: white;
-      font-size: 1em;
-    }
-
-     a {
-        text-decoration: none;
-        color: #796CFF;
-        font-size: 0.7em
-      }
-
-    </style>
+    <link rel="stylesheet" href="css/variation_20.css">
 
   </head>
 
