--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
   <h2> Exercises </h2>
   <ul>
   	<li><a href="house-of-dust.html">House of Dust ▒  </a></li>
-    <li><a href="carl-dier-style.html">Markup Carl Dier  ☆  </a></li>
-    <li><a href="carl-dier-style-2.html">Carl Deir CSS Exercise  ★   </a></li>
-    <li><a href="coding-from-life.html">Coding From Life  〓   </a></li>
+    <li><a href="classwork/carl-dier-style.html">Markup Carl Dier  ☆  </a></li>
+    <li><a href="classwork/carl-dier-style-2.html">Carl Deir CSS Exercise  ★   </a></li>
+    <li><a href="codingfromlife/coding-from-life.html">Coding From Life  〓   </a></li>
   </ul>
 
   <h2>Projects</h2>
   <ul>
-  	<li> <a href="https://www.instagram.com/zz_a_b_c_d_e_f_g/"> Visual Translation  ◐↔◑  </a></li>
+  	<li> <a href="https://www.instagram.com/z_a_b_c_d_e/"> Visual Translation  ◐↔◑  </a></li>
     <li> <a href="project-1/25_variations.html">25 Variations ▩ </a></li>
   </ul>
 
