--- a/project-1/variation_18.html
+++ b/project-1/variation_18.html
@@ -4,30 +4,25 @@
 
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="stylesheet" href="assets/main.css" type="text/css" />
+    <link rel="stylesheet" href="assets/css/variation_18.css" type="text/css" />
     <title>augusto de campos</title>
   </head>
 
-   <style>
-
-    body {
+<style>
+body {
       font-family: arial, Courier, sarif;
       font-size: 11pt;
       text-decoration:none;
       color: #8CE6FF;
       font-style:normal;
       background-color: #B9FFF9;
-      background-image:url("file:///Users/adonis/Desktop/github/interactive/assets/images/red.jpg");
+      background-image:url("assets/images/red.jpg");
       background-repeat:repeat;
-      background-position: 130% 200%;
-      background-size: 20px 60px;
+      background-position:130% 20%;
+      background-size:20px 60px;
 
-      }
-
-      
-    </style>
-
+}
+</style>
   <body>
   
 <p> formar reforma disforma transforma conforma informa forma </p>
