--- a/project-1/variation_20.html
+++ b/project-1/variation_20.html
@@ -10,94 +10,90 @@
   </head>
 
   <body>
-    FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
-    FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
-    FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
-    FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
-    FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
-    FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
-    FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFormatFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
-    FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
-    FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
-    FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
-    FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
-    FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
-    FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
-    FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF 
-    <br>
 
-    <br><br><br>
-    RERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERE
-    RERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERE
-    RERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERE
-    RERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERE
-    REREREREREREREREREREREREREREREREREREREREformaRERERERERERERERERERERERERERERERERERERERERERERERER
-    RERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERE
-    RERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERE
-    RERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERE
-    RERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERE 
-    <br>
+<div class="author">
+<div class="titl">
+    <p>FORMA</p> 
+    <p><span style="color:red; background-color:#FFF; padding:10px">Augusto de Campos</span></p>
+   </div>
+</div>
 
-    <br><br><br>
-    DISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDIS
-    DISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDIS
-    DISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDIS
-    DISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDIS
-    DISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDIS
-    DISDISDISDISDISDISDISDISDISDISDISDISDISDISformaDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDIS
-    DISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDIS
-    DISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDIS
-    DISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDIS
-    DISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDIS
-    DISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDIS
-    <br>
+<div class="container">
 
-    <br><br><br>
-    TRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANS
-    TRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANS
-    TRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANS
-    TRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANS
-    TRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANS
-    TRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANS
-    TRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANS
-    TRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSformaTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANS
-    TRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANS
-    TRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANS
-    TRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANS
-    TRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANS
-    TRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANS
-    TRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANS
-    TRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANS 
-    <br>
+<div class="re">
+    <p>REREREREREREREREREREREREREREREREREREREREREREREREREREREREREREREREREREREREREREREREREREREREREREREREREREREREREREREREREREREREformaRERERERERERERERERERERERERERERERERERERERERERERERER</p>
+</div>
 
+
+
+<div class="trans">
+    <br>
+    TRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANS </br>
+  <br>
+    TRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANS </br>
+      <br>
+    TRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANS </br>
+      <br>
+    TRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANS </br>
+      <br>
+    TRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANS </br>
+    </div>
+
+</div>
+
+<div class="containertwo">
+
+<div class="con">
     <br><br><br>
     CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
     CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
     CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
     CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
+    <br>
     CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
     CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
     CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
     CONCONCONCONCONCONCONCONCONCONCONCONCONCONCOformaCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
+    <br>
     CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
     CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
     CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
+    CONCONCONCONCONCONCONCONCONCONCONCONCONCONCOformaCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
+    <br>
     CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
     CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
     CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
+    CONCONCONCONCONCONCONCONCONCONCONCONCONCONCOformaCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
+    <br>
     CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
     CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
     CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
-    <br><br><br>
+    CONCONCONCONCONCONCONCONCONCONCONCONCONCONCOformaCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
+    <br>
+    CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
+    CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
+    CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
+    CONCONCONCONCONCONCONCONCONCONCONCONCONCONCOformaCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
+    <br>
 
+
+    </br><br><br>
+    </div>
+
+<div class="dis">
 
     <br>
-    INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININformaINININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ 
-    <br><br><br><br><br>
+    INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ
+      <br> INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININformaINININININININININININININININININININININ
+    </br><br>
+    </div>
 
-    FORMA 
+</div>
 
-   <p> <br><br><br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Augusto de campos </p>
+
+
+
+   </div>
     
 
   </body>
