--- a/project-1/variation_09.html
+++ b/project-1/variation_09.html
@@ -4,11 +4,19 @@
 
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>augusto de campos</title>
+    <link rel="stylesheet" href="css/nav.css">
+        <title>augusto de campos</title>
   </head>
 
   <body>
+
+  <nav>
+   <a href="variation_08.html" class="back">&#8592;</a> 
+   |
+   <a href="variation_10.html" class="forward">&#8594;</a>
+</nav>
+
+
   by Augusto de Campos
 
    <style>
