--- a/project-1/variation_14.html
+++ b/project-1/variation_14.html
@@ -4,8 +4,8 @@
 
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>augusto de campos</title>
+    <link rel="stylesheet" href="css/nav.css">
+        <title>augusto de campos</title>
   </head>
 
    <style>
@@ -19,6 +19,13 @@
     </style>
 
   <body>
+
+  <nav>
+   <a href="variation_13.html" class="back">&#8592;</a> 
+   |
+   <a href="variation_15.html" class="forward">&#8594;</a>
+</nav>
+
 
      f o&nbsp&nbsp r
   <sub>
