--- a/project-1/variation_15.html
+++ b/project-1/variation_15.html
@@ -5,9 +5,11 @@
   <head>
     <meta charset="utf-8">
     <title>augusto de campos</title>
+        <link rel="stylesheet" href="project-1/variation_15">
   </head>
 
-  <html> 
+  <html>
+
 <frameset cols="12.5%,12.5%,12.5%,12.5%,12.5%,12.5%,12.5%,12.5%">
 
   <frame src="variation_15/variation_15_1.html">
