--- a/project-1/variation_01.html
+++ b/project-1/variation_01.html
@@ -4,8 +4,8 @@
 
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>augusto de campos</title>
+    <link rel="stylesheet" href="css/nav.css">
 
     <style>
 
@@ -17,17 +17,20 @@
       font-size: 1em;
     }
 
-     a {
-        text-decoration: none;
-        color: #796CFF;
-        font-size: 0.7em
-      }
-
     </style>
 
   </head>
 
   <body>
+
+<nav>
+   <a href="25_variations.html" class="back">&#8592;</a> 
+   |
+   <a href="variation_02.html" class="forward">&#8594;</a>
+</nav>
+</p>
+
+
    <p> forma reforma disforma transforma conforma informa forma </p>
    <p> - Augusto de campos </p>
   </body>
