--- a/project-1/variation_02.html
+++ b/project-1/variation_02.html
@@ -4,8 +4,8 @@
 
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>augusto de campos</title>
+    <link rel="stylesheet" href="css/nav.css">
+        <title>augusto de campos</title>
 
     <style>
 
@@ -28,6 +28,13 @@
   </head>
 
   <body>
+
+  <nav>
+   <a href="variation_01.html" class="back">&#8592;</a> 
+   |
+   <a href="variation_03.html" class="forward">&#8594;</a>
+</nav>
+
    <p> formar </p>
    <p> reforma </p>
    <p> disforma </p>
