--- a/project-1/variation_03.html
+++ b/project-1/variation_03.html
@@ -4,8 +4,8 @@
 
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>augusto de campos</title>
+    <link rel="stylesheet" href="css/nav.css">
+        <title>augusto de campos</title>
 
     <style>
 
@@ -28,6 +28,14 @@
   </head>
 
   <body>
+
+  <nav>
+   <a href="variation_02.html" class="back">&#8592;</a> 
+   |
+   <a href="variation_04.html" class="forward">&#8594;</a>
+</nav>
+
+
    <p> f &nbsp&nbsp&nbsp&nbsp&nbsp o &nbsp&nbsp&nbsp &nbsp&nbsp r &nbsp mar </p>
    <p>  
    <br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp r &nbsp&nbsp&nbsp e &nbsp&nbsp f &nbsp o &nbsp r &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp ma 
