--- a/project-1/variation_06.html
+++ b/project-1/variation_06.html
@@ -4,8 +4,8 @@
 
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>augusto de campos</title>
+    <link rel="stylesheet" href="css/nav.css">
+        <title>augusto de campos</title>
 
     <style>
 
@@ -28,6 +28,14 @@
   </head>
 
   <body>
+
+  <nav>
+   <a href="variation_05.html" class="back">&#8592;</a> 
+   |
+   <a href="variation_07.html" class="forward">&#8594;</a>
+</nav>
+
+
   <h3>by Augusto de Campos</h3> 
 
 <div style="margin:100px";>
