--- a/project-1/variation_08.html
+++ b/project-1/variation_08.html
@@ -4,8 +4,8 @@
 
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>augusto de campos</title>
+    <link rel="stylesheet" href="css/nav.css">
+        <title>augusto de campos</title>
 
     <style>
 
@@ -23,6 +23,14 @@
   </head>
 
   <body>
+
+  <nav>
+   <a href="variation_07.html" class="back">&#8592;</a> 
+   |
+   <a href="variation_09.html" class="forward">&#8594;</a>
+</nav>
+
+
   <span style="margin:auto; display:table;"> 
   <i>by Augusto de Campos<i></span>
   <center><div style="width: 100%;">
