--- a/project-1/variation_15/variation_15_1.html
+++ b/project-1/variation_15/variation_15_1.html
@@ -4,13 +4,15 @@
 
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>augusto de campos</title>
+    <link rel="stylesheet" href="css/nav.css">
+
   </head>
 
    <style>
 
     body {
+
       color:black;
       font-family: "mono type", Courier, sarif;
       background-color: white;
@@ -19,6 +21,13 @@
     </style>
 
   <body>
+
+  <nav>
+   <a href="variation_14.html" class="back">&#8592;</a> 
+   |
+   <a href="variation_16.html" class="forward">&#8594;</a>
+</nav>
+
   
   <p> f
   <br>o</br>
