--- a/project-1/variation_18.html
+++ b/project-1/variation_18.html
@@ -4,8 +4,8 @@
 
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="assets/css/variation_18.css" type="text/css" />
-    <title>augusto de campos</title>
+    <link rel="stylesheet" href="css/nav.css">
+        <title>augusto de campos</title>
   </head>
 
 <style>
@@ -24,6 +24,13 @@ body {
 }
 </style>
   <body>
+
+  <nav>
+   <a href="variation_17.html" class="back">&#8592;</a> 
+   |
+   <a href="variation_19.html" class="forward">&#8594;</a>
+</nav>
+
   
 <p> formar reforma disforma transforma conforma informa forma </p>
 <p> formar reforma disforma transforma conforma informa forma </p>
