--- a/project-1/variation_21.html
+++ b/project-1/variation_21.html
@@ -4,7 +4,7 @@
 
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="stylesheet" href="css/nav.css">
     <title>augusto de campos</title>
 
     <style>
@@ -28,6 +28,14 @@
   </head>
 
   <body>
+
+  <nav>
+   <a href="variation_20.html" class="back">&#8592;</a> 
+   |
+   <a href="variation_22.html" class="forward">&#8594;</a>
+</nav>
+
+
     &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF <br>
 
      <br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
