--- a/project-1/variation_24.html
+++ b/project-1/variation_24.html
@@ -4,7 +4,7 @@
 
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="stylesheet" href="css/nav.css">
     <title>augusto de campos</title>
 
     <style>
@@ -24,6 +24,12 @@
   </head>
 
   <body>
+
+  <nav>
+   <a href="variation_23.html" class="back">&#8592;</a> 
+   |
+   <a href="variation_25.html" class="forward">&#8594;</a>
+</nav>
 
     <br>
     f_f_f_f_f_f_f_f_f_f_f_f_f_f_f_f_f_f_f_f_f_f_f_f_f_f_f_f_
