--- a/project-1/variation_15/variation_15_1.html
+++ b/project-1/variation_15/variation_15_1.html
@@ -14,9 +14,9 @@
     body {
 
       color:black;
-      font-family: "mono type", Courier, sarif;
-      background-color: white;
-      font-size: 1em
+      font-family: arial, Courier, sarif;
+      background-color: #99FFDB;
+      font-size: 20px;
       
     </style>
 
@@ -29,12 +29,12 @@
 </nav>
 
   
-  <p> f
-  <br>o</br>
-  <br>r</br>
-  <br>m</br>
-  <br>a</br>
-  <br>r</br>
+  <p> F <br>
+  <br>O</br>
+  <br>R</br>
+  <br>M</br>
+  <br>A</br>
+  <br>R</br>
   </p>
    </body>
 
