--- a/project-1/variation_15/variation_15_2.html
+++ b/project-1/variation_15/variation_15_2.html
@@ -12,14 +12,22 @@
 
     body {
       color:black;
-      font-family: "mono type", Courier, sarif;
-      background-color: white;
-      font-size: 1em
+      font-family: arial, Courier, sarif;
+      background-color: #E0FFF4;
+      font-size: 25px;
       
     </style>
 
   <body>
- <p> reforma </p>
+<br> <br> 
+ R <br> 
+ E <br> 
+ F <br> 
+ O <br> 
+ R <br> 
+ M <br> 
+ A <br> 
+ </p>
    </body>
 
 </html>
