--- a/project-1/variation_15/variation_15_3.html
+++ b/project-1/variation_15/variation_15_3.html
@@ -12,14 +12,51 @@
 
     body {
       color:black;
-      font-family: "mono type", Courier, sarif;
-      background-color: white;
-      font-size: 1em
+      font-family: Arial, Helvetica, sans-serif;
+      background-color: #B3CCC3;
+      font-size: 25px;
       
     </style>
 
   <body>
-   <p> disforma </p>
+  D<br>
+  I<br> 
+ S<br> 
+ F <br> 
+ O <br> 
+ R <br> 
+ M <br> 
+ A <br> 
+ </p>
+
+ <p> disforma </p>
+
+  D<br>
+  I<br> 
+ S<br> 
+ F <br> 
+ O <br> 
+ R <br> 
+ M <br> 
+ A <br> 
+ </p>
+
+ <p> disforma </p>
+
+   <br> <br> 
+  D<br>
+  I<br> 
+ S<br> 
+ F <br> 
+ O <br> 
+ R <br> 
+ M <br> 
+ A <br> 
+ </p>
+
+ <p> disforma </p>
+
+
    </body>
 
 </html>
