--- a/project-1/variation_15/variation_15_5.html
+++ b/project-1/variation_15/variation_15_5.html
@@ -12,14 +12,22 @@
 
     body {
       color:black;
-      font-family: "mono type", Courier, sarif;
-      background-color: white;
-      font-size: 1em
+      font-family: Arial, Helvetica, sans-serif;
+      background-color: #E0FBFF;
+      font-size: 20px;
       
     </style>
 
   <body>
-   <p> conforma </p>
+   <p> 
+   C <br>
+   O <br>
+   N <br> 
+   F <br><br><br><br>
+   O <br>
+   R <br>
+   M <br>
+   A </p>
    </body>
 
 </html>
