--- a/project-1/variation_15/variation_15_6.html
+++ b/project-1/variation_15/variation_15_6.html
@@ -12,14 +12,49 @@
 
     body {
       color:black;
-      font-family: "mono type", Courier, sarif;
-      background-color: white;
-      font-size: 1em
+      font-family: Arial, Helvetica, sans-serif;
+      background-color: #A4B4FF;
+      font-size: 20px;
       
     </style>
 
   <body>
-   <p> informa </p>
+   <p> 
+   INF <br> 
+   ORMA </p>
+     <p> 
+   INF <br> 
+   ORMA </p>
+     <p> 
+   INF <br> 
+   ORMA </p>
+     <p> 
+   INF <br> 
+   ORMA </p>
+     <p> 
+   INF <br> 
+   ORMA </p>
+     <p> 
+   INF <br> 
+   ORMA </p>
+     <p> 
+   INF <br> 
+   ORMA </p>
+     <p> 
+   INF <br> 
+   ORMA </p>
+     <p> 
+   INF <br> 
+   ORMA </p>
+     <p> 
+   INF <br> 
+   ORMA </p>
+     <p> 
+   INF <br> 
+   ORMA </p>
+     <p> 
+   INF <br> 
+   ORMA </p>
    </body>
 
 </html>
