--- a/project-1/variation_15/variation_15_7.html
+++ b/project-1/variation_15/variation_15_7.html
@@ -12,14 +12,14 @@
 
     body {
       color:black;
-      font-family: "mono type", Courier, sarif;
-      background-color: white;
-      font-size: 1em
+      font-family: Arial, Helvetica, sans-serif;
+      background-color: #B0B5CC;
+      font-size: 20px;
       
     </style>
 
   <body>
-   <p> forma </p>
+   <p> F<br>O<br>R<br>M<br>A<br> </p>
    </body>
 
 </html>
