--- a/project-1/variation_15/variation_15_8.html
+++ b/project-1/variation_15/variation_15_8.html
@@ -12,14 +12,21 @@
 
     body {
       color:black;
-      font-family: "mono type", Courier, sarif;
-      background-color: white;
-      font-size: 1em
+      font-family: Arial, Helvetica, sans-serif;
+      background-color: #E5DCFF;
+      font-size: 20px;
       
     </style>
 
   <body>
-   <p> Augusto de campos </p>
+   <p> 
+   <br> <br> <br> <br> <br> <br> <br> <br> 
+      <br> <br> <br> <br> <br> <br> <br> <br> 
+
+   Augusto <br> 
+   de  <br> 
+   campos <br> 
+   </p>
    </body>
 
 </html>
